--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "@types/flickity": "^2.2.11",
+    "flickity": "^3.0.0",
     "hamburger-react": "^2.5.2",
     "next": "16.0.1",
     "react": "19.2.0",
